<resources>
    <string name="app_name">cam</string>
    <string name="login">LOGIN</string>
    <string name="username">Username :</string>
    <string name="password">Password :</string>
    <string name="signin">Sign In</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="phone">Phone Number</string>
    <string name="signup">SIGNUP</string>
    <string name="create_account">Create New  Account </string>
    <string name="forget_password">Forget Password</string>
</resources>
