<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/firstname"
            android:textAlignment="center"
            android:textColor="#FF09209E"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="2"
            android:fontFamily="sans-serif"
            android:hint="@string/firstname"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_lname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/lastname"
            android:textAlignment="center"
            android:textColor="#FF09209E"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_lname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="2"
            android:fontFamily="sans-serif"
            android:hint="@string/lastname"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/username"
            android:textAlignment="center"
            android:textColor="#FF09209E"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="2"
            android:fontFamily="sans-serif"
            android:hint="@string/username"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/password"
            android:textAlignment="center"
            android:textColor="#FF09209E"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="2"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_confirmpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/confirmpassword"
            android:textAlignment="center"
            android:textColor="#FF09209E"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_confirmpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="2"
            android:fontFamily="sans-serif"
            android:hint="@string/confirmpassword"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="#FF09209E"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="2"
            android:fontFamily="sans-serif"
            android:hint="@string/email"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/phone"
            android:textAlignment="center"
            android:textColor="#FF09209E"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="2"
            android:fontFamily="sans-serif"
            android:hint="@string/phone"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:background="#ffffff"
        android:gravity="center_horizontal"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="#052F6F"
        android:textSize="15sp" />
</LinearLayout>
